kubernetes/cilium-config/longhorn/longhorn-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn-gateway
  namespace: longhorn-system
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: "longhorn.reprogle.org"
      name: longhorn-listener
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: longhorn-cert
