kubernetes/cilium-config/longhorn/longhorn-httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: longhorn-httproute
  namespace: longhorn-system
spec:
  hostnames:
    - longhorn.reprogle.org
  parentRefs:
    - name: longhorn-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
